# ALICE-SDF

./: .gitignore  API.md  ARCHITECTURE.md  CHANGELOG-history.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-COMMUNITY  NEW_MODIFIERS_SUMMARY.md  NEW_TRANSFORMS_QUICK_REFERENCE.md  NEW_TRANSFORMS_SUMMARY.md  README.md  README_JP.md  alice_sdf.gdextension  pyproject.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/scripts/: check_min_tests.sh
.github/workflows/: ci.yml  ecosystem-tests.yml  release-wheels.yml  release.yml
benches/: gpu_vs_cpu.rs  sdf_eval.rs
bindings/: AliceSdf.cs  README.md
bindings/bevy/alice-sdf-bevy/: Cargo.toml
bindings/bevy/alice-sdf-bevy/examples/: sphere_demo.rs
bindings/bevy/alice-sdf-bevy/src/: lib.rs
bindings/blender/: README.md
bindings/cinema4d/: README.md
bindings/houdini/: README.md  install.sh
bindings/maya/: README.md
bindings/nuke/: README.md
bindings/openxr/: Cargo.toml  README.md
bindings/openxr/examples/: quest_demo.rs
bindings/openxr/src/: lib.rs
bindings/threejs/: README.md  package.json  tsconfig.json
bindings/ue5/: AliceSdf.h
docs/: API_REFERENCE.md  ARCHITECTURE.md  COOKBOOK.md  GODOT_GUIDE.md  PUBLISH.md  PYTHON_GUIDE.md  QUICKSTART.md  UNREAL_ENGINE.md  USAGE.md  USAGE_JP.md  VFX_COOKBOOK.md  WASM_GUIDE.md
examples/: csg_operations.rs  export_mesh.rs  gpu_eval.rs  hello_sphere.rs  new_modifiers_demo.rs  new_transforms.rs  storage_basket.asdf.json  sword.lol  text_to_3d_demo.rs
examples/wasm-demo/: Cargo.toml  index.html
examples/wasm-demo/src/: lib.rs
include/: alice_sdf.h
mobile/: README.md
mobile/swift-package/: Package.swift  README.md
mobile/swift-package-visionos/: .gitignore  Package.swift  README.md
mobile/uniffi-wrapper/: Cargo.toml  build.rs
mobile/uniffi-wrapper/src/: alice_sdf.udl  lib.rs
mobile/uniffi-wrapper/tests/: integration.rs
npm/: .npmignore  README.md  index.d.ts  package.json
prompts/: sdf_generation_system_prompt.md
python/alice_sdf/: __init__.py  alice_sdf.pyi
scripts/: build_ue5_plugin.sh  update-ue5-dylib.sh  update_counts.sh
server/: Cargo.toml  README.md  config.py  main.py  models.py  requirements.txt
server/examples/scenes/: README.md  alien_mushroom_forest.json  castle_tower.json  mechanical_gear.json  snowman.json  sphere_on_ground.json  twisted_pillar.json
server/prompts/: examples.py  system_prompt.py  system_prompt_lol.py
server/services/: crawler_service.py  llm_service.py  sdf_service.py
server/src/: main.rs
server/static/: viewer.html
server/tests/: test_api.py  test_llm_service.py  test_sdf_service.py
src/: animation.rs  asp_bridge.rs  autodiff.rs  cache_bridge.rs  codec_bridge.rs  collision.rs  constraint.rs  crispy.rs  diff.rs  font_bridge.rs  heatmap.rs  interval.rs  lib.rs  llm_schema.rs  material.rs  measure.rs  neural.rs  optimize.rs  physics_bridge.rs  python.rs  sdf2d.rs  shell.rs  sim_bridge.rs  soa.rs  tight_aabb.rs  types.rs  wasm.rs
src/cache/: chunked.rs  mod.rs
src/compiled/: aabb.rs  compiler.rs  eval.rs  eval_bvh.rs  eval_simd.rs  eval_soa.rs  instanced.rs  instruction.rs  jit_simd.rs  mod.rs  opcode.rs  simd.rs  transpiler_common.rs
src/destruction/: debris.rs  fracture.rs  mod.rs  operations.rs
src/eval/: gradient.rs  mod.rs  parallel.rs
src/ffi/: api.rs  compilation.rs  eval.rs  info.rs  io_ffi.rs  memory.rs  mesh.rs  mod.rs  modifiers.rs  operations.rs  primitives.rs  registry.rs  shader.rs  transforms.rs  types.rs
src/gi/: cone_trace.rs  irradiance.rs  mod.rs  probe_bake.rs
src/godot/: README.md  mod.rs
src/io/: abm.rs  alembic.rs  asdf.rs  fbx.rs  gltf.rs  iges.rs  json.rs  mod.rs  nanite.rs  obj.rs  ply.rs  splat.rs  step.rs  stl.rs  threemf.rs  ue5_asset.rs  unity_mesh.rs  usd.rs  vdb.rs  vox.rs
src/mesh/: bvh.rs  collision.rs  decimate.rs  dual_contouring.rs  gpu_marching_cubes.rs  gpu_mc_shaders.rs  hermite.rs  lightmap.rs  lod.rs  lod_persist.rs  manifold.rs  mesh_to_sdf.rs  mod.rs  nanite.rs  optimize.rs  point_cloud_sdf.rs  primitive_fitting.rs  sdf_to_mesh.rs  uv_unwrap.rs
src/modifiers/: bend.rs  displacement.rs  extrude.rs  heightmap_displacement.rs  icosahedral.rs  ifs.rs  mirror.rs  mod.rs  noise.rs  octant_mirror.rs  polar_repeat.rs  repeat.rs  revolution.rs  surface_roughness.rs  sweep.rs  taper.rs  twist.rs
src/operations/: chamfer.rs  columns.rs  engrave.rs  groove.rs  intersection.rs  mod.rs  morph.rs  pipe.rs  smooth.rs  stairs.rs  subtraction.rs  tongue.rs  union.rs  xor.rs
src/primitives/: arc_shape.rs  barrel.rs  bezier.rs  blobby_cross.rs  box3d.rs  box_frame.rs  capped_cone.rs  capped_torus.rs  capsule.rs  chamfered_cube.rs  cone.rs  cross_shape.rs  cut_hollow_sphere.rs  cut_sphere.rs  cylinder.rs  death_star.rs  diamond.rs  diamond_surface.rs  dodecahedron.rs  egg.rs  ellipsoid.rs  fischer_koch_s.rs  frd.rs  gdf_vectors.rs  gyroid.rs  heart.rs  helix.rs  hex_prism.rs  horseshoe.rs  icosahedron.rs  infinite_cone.rs  infinite_cylinder.rs  iwp.rs  lidinoid.rs  link.rs  mod.rs  moon.rs  neovius.rs  octahedron.rs  parabola_segment.rs  (+28 more)
src/python/: compiled.rs  functions.rs  helpers.rs  io.rs  mod.rs  node.rs  operations.rs  transforms.rs
src/raycast/: march.rs  mod.rs
src/svo/: build.rs  linearize.rs  mod.rs  query.rs  streaming.rs
src/terrain/: caves.rs  clipmap.rs  erosion.rs  heightmap.rs  mod.rs  splatmap.rs
src/texture/: fitting.rs  mod.rs  noise_cpu.rs  optimizer.rs  shader.rs  spectrum.rs
src/transforms/: lattice.rs  mod.rs  projective.rs  rotate.rs  scale.rs  skinning.rs  translate.rs
src/types/: constructors.rs  containers.rs  mod.rs  modifiers.rs  operations.rs  (+1 more)
tests/: test_batch_operations.rs  test_cache_correctness.rs  test_compiled_evaluation.rs  test_io_round_trip.rs  test_mesh_fidelity.rs  test_new_modifiers.rs  test_new_transforms.rs  test_rendering_pipeline.rs
unity-sdf-universe/: .gitignore  LICENSE  README.md  SETUP_GUIDE.md
unreal-plugin/: AliceSDF.uplugin  README.md
vrchat-package/: .gitignore  ALICE-SDF-VRChat.unitypackage  CHANGELOG.md  LICENSE.md  README.md  README_JP.md  package.json
(+148 files in other folders)
