[package]
name = "alice-sdf"
version = "1.7.4"
edition = "2021"
authors = ["Moroya Sakamoto <sakamoro@alicelaw.net>"]
description = "ALICE-SDF: 3D/Spatial Data Specialist — Store laws, not polygons. GLSL/WGSL/HLSL transpile, SVO, GPU marching cubes, texture-fit, procedural CSG. Bridges to alice-codec/physics/asp/cache/font are available via GitHub path dep only in 1.7.4 (scheduled restoration in 1.8.0 once transitive deps publish)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ext-sakamoro/ALICE-SDF"
keywords = ["sdf", "distance-field", "3d", "procedural", "csg"]
categories = ["graphics", "game-development", "mathematics"]
rust-version = "1.75"

[lib]
name = "alice_sdf"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "alice-sdf"
path = "src/bin/main.rs"

[features]
default = ["cli"]
cli = ["clap"]
texture-fit = ["image", "cli"]
python = ["pyo3", "numpy"]
godot = ["dep:godot"]  # Godot 4.x GDExtension integration
jit = ["cranelift-codegen", "cranelift-frontend", "cranelift-jit", "cranelift-module", "cranelift-native"]
gpu = ["wgpu", "pollster", "bytemuck", "futures-channel"]
volume = ["gpu"]  # 3D volume texture baking
gpu-mesh = ["gpu"]  # GPU Marching Cubes mesh generation
svo = []  # Sparse Voxel Octree
svo-gpu = ["svo", "gpu"]  # SVO with GPU support
destruction = []  # Voxel destruction system
terrain = []  # Terrain system (heightmap + erosion + caves)
gi = ["svo"]  # Cone tracing global illumination
hlsl = []  # HLSL transpiler for UE5/DirectX
glsl = []  # GLSL transpiler for Unity/OpenGL/Vulkan
# Bridge features (codec/physics/asp/sdf-cache/font) were removed
# temporarily for the 1.7.4 crates.io publish because their optional
# path deps (alice-codec/physics/libasp/cache/font) are not yet on
# crates.io. Users who need the bridges keep using `git`/`path` deps
# against this repo — the src/*_bridge.rs modules are cfg-gated so
# they simply don't compile without the features. Scheduled for
# restoration in 1.8.0 once the transitive dep chain publishes.
ffi = ["lazy_static"]  # C/C++/C# FFI bindings
wasm = ["dep:wasm-bindgen", "dep:js-sys"]  # WebAssembly bindings (browser)
openvdb = ["dep:vdb-rs"]  # OpenVDB float grid I/O (.vdb)
all-shaders = ["gpu", "hlsl", "glsl"]  # All shader transpilers
unity = ["ffi", "glsl"]  # Unity integration (FFI + GLSL)
unreal = ["ffi", "hlsl"]  # Unreal Engine integration (FFI + HLSL)
aaa = ["volume", "gpu-mesh", "svo-gpu", "destruction", "terrain", "gi"]  # All AAA game features

[dependencies]
# SIMD math
glam = { version = "0.29", features = ["serde"] }
wide = "0.7"  # Portable SIMD (AVX2/AVX-512/NEON)

# Parallel processing
rayon = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "2.0"

# Logging
log = "0.4"

# CLI (optional)
clap = { version = "4.5", features = ["derive"], optional = true }

# Python bindings (optional)
# `abi3-py310` で Python 3.10+ の安定 ABI に固定。1 つの `.so` で 3.10/3.11/3.12/3.13 を
# サポートし、Python ABI ごとの再ビルドが不要になる (setup の煩雑さを解消)。
pyo3 = { version = "0.23", features = ["extension-module", "multiple-pymethods", "abi3-py310"], optional = true }
numpy = { version = "0.23", optional = true }

# Godot GDExtension (optional)
godot = { version = "0.2", optional = true }

# CRC for file integrity
crc32fast = "1.4"

# Bridges (alice-codec / alice-physics / libasp / alice-cache /
# alice-font) — removed in 1.7.4 for crates.io publish; the bridge
# modules live behind #[cfg(feature = "...")] gates that no longer
# activate. Restore in 1.8.0 once the transitive dep chain is on
# crates.io. Users who need bridges today can still `path`-dep this
# repo against the sibling checkouts.

# FFI support (optional)
lazy_static = { version = "1.5", optional = true }

# JIT compilation (optional)
cranelift-codegen = { version = "0.113", optional = true }
cranelift-frontend = { version = "0.113", optional = true }
cranelift-jit = { version = "0.113", optional = true }
cranelift-module = { version = "0.113", optional = true }
cranelift-native = { version = "0.113", optional = true }

# GPU compute (optional)
wgpu = { version = "24", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1.21", features = ["derive"], optional = true }
futures-channel = { version = "0.3", optional = true }

# Image loading (optional, for texture-fit)
image = { version = "0.25", default-features = false, features = ["png", "jpeg"], optional = true }

# WebAssembly bindings (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

# OpenVDB I/O (optional)
vdb-rs = { version = "0.6", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sdf_eval"
harness = false

[[bench]]
name = "gpu_vs_cpu"
harness = false
required-features = []

# Declare the 5 bridge features as known even though the entries are
# gone from [features] for the 1.7.4 crates.io publish. Without this
# `cargo clippy -- -D warnings` and `cargo doc -Dwarnings` fail on
# `#[cfg(feature = "physics")]` etc. left in src/lib.rs — the code is
# retained on purpose for the 1.8.0 restoration.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("codec", "physics", "asp", "sdf-cache", "font"))',
] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
# For native CPU optimizations: RUSTFLAGS="-C target-cpu=native" cargo build --release

[profile.bench]
opt-level = 3
lto = "thin"
debug = false
codegen-units = 1

